устранил замечания